--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/educator(1).jpeg" width="500px">
-            <img src="img/medicalassistant(1).jpeg" width="500px"><br>
-          <img src="img/finishline(1).png" width="500px">
-           <img src="img/lululemon.png" width="500px"><br>
-
+            <img src="img/educator.jpeg" width="500px">
+            <img src="img/medicalassistant.jpeg" width="500px"><br>
+            <img src="img/finishline.png" width="500px">
+            <img src="img/lululemon.png" width="500px"><br>
+            
         </center>
       </div>
     </section>
